; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_compress.c_ZSTD_sufficientBuff.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_compress.c_ZSTD_sufficientBuff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@ZSTD_BLOCKSIZE_MAX = common dso_local global i64 0, align 8
@ZSTDb_buffered = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [63 x i8] c"ZSTD_sufficientBuff: is neededBufferSize2=%u <= bufferSize1=%u\00", align 1
@.str.1 = private unnamed_addr constant [53 x i8] c"ZSTD_sufficientBuff: is maxNbSeq2=%u <= maxNbSeq1=%u\00", align 1
@.str.2 = private unnamed_addr constant [53 x i8] c"ZSTD_sufficientBuff: is maxNbLit2=%u <= maxNbLit1=%u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i64, i64, i64, i32, i64)* @ZSTD_sufficientBuff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ZSTD_sufficientBuff(i64 %0, i64 %1, i64 %2, i64 %3, i64 %4, i32 %5, i64 %6) #0 {
  %8 = alloca %struct.TYPE_3__, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = bitcast %struct.TYPE_3__* %8 to { i64, i32 }*
  %20 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %19, i32 0, i32 0
  store i64 %4, i64* %20, align 8
  %21 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %19, i32 0, i32 1
  store i32 %5, i32* %21, align 8
  store i64 %0, i64* %9, align 8
  store i64 %1, i64* %10, align 8
  store i64 %2, i64* %11, align 8
  store i64 %3, i64* %12, align 8
  store i64 %6, i64* %13, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = shl i64 1, %23
  %25 = load i64, i64* %13, align 8
  %26 = call i64 @MIN(i64 %24, i64 %25)
  %27 = call i64 @MAX(i32 1, i64 %26)
  store i64 %27, i64* %14, align 8
  %28 = load i64, i64* @ZSTD_BLOCKSIZE_MAX, align 8
  %29 = load i64, i64* %14, align 8
  %30 = call i64 @MIN(i64 %28, i64 %29)
  store i64 %30, i64* %15, align 8
  %31 = load i64, i64* %15, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = icmp eq i32 %33, 3
  %35 = zext i1 %34 to i64
  %36 = select i1 %34, i32 3, i32 4
  %37 = sext i32 %36 to i64
  %38 = udiv i64 %31, %37
  store i64 %38, i64* %16, align 8
  %39 = load i64, i64* %15, align 8
  store i64 %39, i64* %17, align 8
  %40 = load i64, i64* %12, align 8
  %41 = load i64, i64* @ZSTDb_buffered, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %47

43:                                               ; preds = %7
  %44 = load i64, i64* %14, align 8
  %45 = load i64, i64* %15, align 8
  %46 = add i64 %44, %45
  br label %48

47:                                               ; preds = %7
  br label %48

48:                                               ; preds = %47, %43
  %49 = phi i64 [ %46, %43 ], [ 0, %47 ]
  store i64 %49, i64* %18, align 8
  %50 = load i64, i64* %18, align 8
  %51 = trunc i64 %50 to i32
  %52 = load i64, i64* %9, align 8
  %53 = trunc i64 %52 to i32
  %54 = call i32 @DEBUGLOG(i32 4, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str, i64 0, i64 0), i32 %51, i32 %53)
  %55 = load i64, i64* %16, align 8
  %56 = trunc i64 %55 to i32
  %57 = load i64, i64* %10, align 8
  %58 = trunc i64 %57 to i32
  %59 = call i32 @DEBUGLOG(i32 4, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0), i32 %56, i32 %58)
  %60 = load i64, i64* %17, align 8
  %61 = trunc i64 %60 to i32
  %62 = load i64, i64* %11, align 8
  %63 = trunc i64 %62 to i32
  %64 = call i32 @DEBUGLOG(i32 4, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.2, i64 0, i64 0), i32 %61, i32 %63)
  %65 = load i64, i64* %17, align 8
  %66 = load i64, i64* %11, align 8
  %67 = icmp ule i64 %65, %66
  %68 = zext i1 %67 to i32
  %69 = load i64, i64* %16, align 8
  %70 = load i64, i64* %10, align 8
  %71 = icmp ule i64 %69, %70
  %72 = zext i1 %71 to i32
  %73 = and i32 %68, %72
  %74 = load i64, i64* %18, align 8
  %75 = load i64, i64* %9, align 8
  %76 = icmp ule i64 %74, %75
  %77 = zext i1 %76 to i32
  %78 = and i32 %73, %77
  ret i32 %78
}

declare dso_local i64 @MAX(i32, i64) #1

declare dso_local i64 @MIN(i64, i64) #1

declare dso_local i32 @DEBUGLOG(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
